--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1893,10 +1893,10 @@
 		}
 
 		.icon.major {
-			-moz-transform: rotate(-45deg);
+/*			-moz-transform: rotate(-45deg);
 			-webkit-transform: rotate(-45deg);
 			-ms-transform: rotate(-45deg);
-			transform: rotate(-45deg);
+			transform: rotate(-45deg);*/
 			border-radius: 3px;
 			border: solid 2px #fff;
 			display: inline-block;
